# paper_related

./: .gitignore  .ignore  README.md
LBD_Descriptor/: CMakeLists.txt
LBD_and_LineMatching/: CMakeLists.txt  Demo_LBD_single.cpp
LBD_and_LineMatching/image/: 1_1Llines.txt  1_1MatchRes.txt  1_1Rlines.txt  Test_Bat_LMA  Test_Single_LMA  eigenVec.txt  testLlines.txt  testMatchRes.txt  testRlines.txt
LineSegmentMatching/: CMakeLists.txt
LineSegmentMatching/src/: LineMatching.cpp  LineMatching.h
VINS-Fusion/: CMakeCache.txt  CMakeLists.txt
VINS-Fusion/camera_models/: CMakeLists.txt
VINS-Fusion/camera_models/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
VINS-Fusion/camera_models/catkin_generated/installspace/: camera_models.pc  camera_modelsConfig.cmake
VINS-Fusion/camera_models/include/camodocal/camera_models/: Camera.h
VINS-Fusion/catkin_generated/: generate_cached_setup.py  setup_cached.sh
VINS-Fusion/devel/: .catkin  .rosinstall  setup.sh
VINS-Fusion/devel/lib/pkgconfig/: camera_models.pc  global_fusion.pc
VINS-Fusion/devel/share/camera_models/cmake/: camera_modelsConfig.cmake
VINS-Fusion/devel/share/global_fusion/cmake/: global_fusionConfig.cmake
VINS-Fusion/global_fusion/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
VINS-Fusion/global_fusion/catkin_generated/installspace/: global_fusion.pc  global_fusionConfig.cmake
VINS-Fusion/loop_fusion/catkin_generated/stamps/loop_fusion/: _setup_util.py.stamp
VINS-Mono-code-annotation/: README.md
VINS-Mono-code-annotation/feature_tracker/src/: feature_tracker.cpp
lsd_1.6/: 1  1.result.eps  CMakeLists.txt  lsd  lsd_call_example
lsd_1.6/LSD_1.6_duplicate/: CMakeLists.txt
lsd_1.6/LSD_1.6_duplicate/include/: lsd.h
lsd_1.6/LSD_1.6_duplicate/src/: lsd.c  lsd.cpp
lsd_1.6/LSD_1.6_duplicate/src_bin/: lsd_cmd.c  lsd_cmd.cpp  lsd_duplicate.cpp
lsd_1.6/image/: 1.pgm  1_2.pgm
lsd_1.6/src/: lsd.c
lsd_1.6/src_bin/: lsd_cmd.c
opencv_idz/opencv_idz/: CMakeLists.txt
opencv_idz/opencv_idz/src/: EDLines.cpp
opencv_idz/opencv_idz/src_bin/: main.cpp
